# bareos-mcp-server

./: .gitignore  .mcp.json.example  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bconsole.example.sh
.github/workflows/: release.yml
src/: bareos.rs  main.rs
