[package]
name = "bareos-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Bareos backup system with read-only operations"

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
